--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "http://localhost:5000/posts",
+  "proxy": "https://reactdashboard-k0oe.onrender.com/posts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
